--- a/index.html
+++ b/index.html
@@ -70,14 +70,9 @@
             </p>
             <div class="about-me__body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua.
-                    Nullam non nisi est sit. Etiam erat velit scelerisque in dictum non consectetur.
-                </p>
-                <p>Cursus vitae congue mauris rhoncus aenean vel.
-                    Id diam vel quam elementum pulvinar etiam non quam lacus.
-                    Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi.
+                    Shelton is an individual with a keen eye for detail, highly flexible with analytical
+                    skills. Has great Object Orientated Programming abilities and loves learning new technologies to
+                    improve his knowledge.
                 </p>
             </div>
 
@@ -100,7 +95,7 @@
             </h2>
             <div class="services">
                 <div class="service">
-                    <h3>Service 1</h3>
+                    <h3>Simple Programs</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.
@@ -113,7 +108,7 @@
                 <!--/ service-->
 
                 <div class="service">
-                    <h3>Service 2</h3>
+                    <h3>Logos</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.
@@ -126,7 +121,7 @@
                 <!--/ service-->
 
                 <div class="service">
-                    <h3>Service 3</h3>
+                    <h3>Media Products</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.
@@ -193,6 +188,11 @@
                     <div class="skills__button">
                         <span class="skills-icon">
                             <img src="./Icons/icons8-ubuntu-96.png" alt="">
+                        </span>
+                    </div>
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/icons8-canva-200.png" alt="">
                         </span>
                     </div>
                     <div class="skills__button">
