--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </p>
             <div class="about-me__body">
                 <p>
-                    Shelton is an individual with a keen eye for detail, highly flexible with analytical
-                    skills. Has great Object Orientated Programming abilities and loves learning new technologies to
-                    improve his knowledge.
+                    Hi, I am individual with a keen eye for detail, highly flexible with analytical
+                    skills. I have great Object Orientated Programming techniques and I love learning new technologies
+                    to improve my knowledge.
                 </p>
             </div>
 
