--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
                 <div class="service">
                     <h3>Logos</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.
-                        Nullam non nisi est sit. Etiam erat velit scelerisque in dictum non consectetur.
-                        Cursus vitae congue mauris rhoncus aenean vel. Id diam vel quam elementum pulvinar etiam non
-                        quam
-                        lacus.
-                        Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi.</p>
+                    <p>Looking for Flat & Modern Minimalist Logo that your clients will remember and you will love?
+                        I will create and design an logo for you. :)
+                        Why Choose Me?<br>
+                        - I believe in memorable and timeless designs.<br>
+                        - Customer happiness is the center of our business.<br>
+                        - Custom, creative, professional, quality work. <br>
+                        - Eye-catching trending and successful.<br>
+                        .</p>
                 </div>
                 <!--/ service-->
 
