--- a/index.html
+++ b/index.html
@@ -110,13 +110,15 @@
                 <div class="service">
                     <h3>Logos</h3>
                     <p>Looking for Flat & Modern Minimalist Logo that your clients will remember and you will love?
-                        I will create and design an logo for you. :)
-                        Why Choose Me?<br>
-                        - I believe in memorable and timeless designs.<br>
-                        - Customer happiness is the center of our business.<br>
-                        - Custom, creative, professional, quality work. <br>
-                        - Eye-catching trending and successful.<br>
-                        .</p>
+                        I will create and design it for you.
+                    </p>
+                    <p>
+                        Why choose me?
+                        - I believe in memorable and timeless designs.
+                        - Customer happiness is the center of our business.
+                        - Custom, creative, professional, quality work.
+                        - Eye-catching trending and successful.
+                    </p>
                 </div>
                 <!--/ service-->
 
