--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
 
             <div class="cta-btn">
-                <a href="#" class="btn">Download CV <i class="fas fa-download"></i> </a>
+                <a href="SN CV Tech (1).pdf" class="btn">Download CV <i class="fas fa-download"></i> </a>
             </div>
 
             <img src="./images/pexels-nastasya-day-2379476.jpg" alt="A picture of Shelton in a Park"
@@ -96,14 +96,14 @@
             <div class="services">
                 <div class="service">
                     <h3>Simple Programs</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.
-                        Nullam non nisi est sit. Etiam erat velit scelerisque in dictum non consectetur.
-                        Cursus vitae congue mauris rhoncus aenean vel. Id diam vel quam elementum pulvinar etiam non
-                        quam
-                        lacus.
-                        Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi.</p>
+                    <p>Do you need help in Programming assignment or Project? I will fulfil
+                        all your needs.
+                        Bug Fixing/ Programming Assignment or Project related help in programming.
+                        Languages: C++, Java, Python, HTML, CSS, and Javascript <br> <br>
+                        Services:Code Bug Fixing, Desktop Application Development, Creating a documentation for your
+                        code, Help developing your application <br>
+                        Expertise: Basic Functionalities, OOP Concepts
+                    </p>
                 </div>
                 <!--/ service-->
 
@@ -362,6 +362,9 @@
             </li>
         </ul>
     </footer>
+    <small class="copyright">
+        &copy; 2021 ShelShock Portfolio | Website by Shelton
+    </small>
     <script src="js/index.js"></script>
 </body>
 
