--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
             <div class="about-me__body">
                 <p>
-                    Hi, I am individual with a keen eye for detail, highly flexible with analytical
+                    Hi, I have a keen eye for detail, highly flexible with analytical
                     skills. I have great Object Orientated Programming techniques and I love learning new technologies
                     to improve my knowledge.
                 </p>
@@ -80,8 +80,7 @@
                 <a href="SN CV Tech (1).pdf" class="btn">Download CV <i class="fas fa-download"></i> </a>
             </div>
 
-            <img src="./images/pexels-nastasya-day-2379476.jpg" alt="A picture of Shelton in a Park"
-                class="about-me__img">
+            <img src="./images/Shelton Profile Pic.jpg" alt="A picture of Shelton in a Park" class="about-me__img">
 
         </div>
 
@@ -97,10 +96,11 @@
                 <div class="service">
                     <h3>Simple Programs</h3>
                     <p>Do you need help in Programming assignment or Project? I will fulfil
-                        all your needs.
-                        Bug Fixing/ Programming Assignment or Project related help in programming.
-                        Languages: C++, Java, Python, HTML, CSS, and Javascript <br> <br>
-                        Services:Code Bug Fixing, Desktop Application Development, Creating a documentation for your
+                        all your needs. Bug Fixing, Programming Assignment or Project related help in programming.
+                    </p>
+                    <p>
+                        Languages: C++, Java, Python <br>
+                        Services: Code Bug Fixing, Desktop Application Development, Creating a documentation for your
                         code, Help developing your application <br>
                         Expertise: Basic Functionalities, OOP Concepts
                     </p>
