--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <h2 class="section__title section__title--services">
                 What I do
             </h2>
-            <div class="services">
-                <div class="service">
+            <div class="row">
+                <div class="column service">
                     <h3>Simple Programs</h3>
                     <p>Do you need help in Programming assignment or Project? I will fulfil
                         all your needs. Bug Fixing, Programming Assignment or Project related help in programming.
@@ -117,22 +117,22 @@
                 </div>
                 <!--/ service-->
 
-                <div class="service">
+                <div class="column service">
                     <h3>Logos</h3>
                     <p>Looking for Flat & Modern Minimalist Logo that your clients will remember and you will love?
                         I will create and design it for you.
                     </p>
                     <p>
                         Why choose me?
-                        - I believe in memorable and timeless designs.
-                        - Customer happiness is the center of our business.
+                        - Memorable and timeless designs.
+                        - Customer happiness is the center of my products.
                         - Custom, creative, professional, quality work.
                         - Eye-catching trending and successful.
                     </p>
                 </div>
                 <!--/ service-->
 
-                <div class="service">
+                <div class="column service">
                     <h3>Media Products</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
