Year 2 Software Dev Student Website

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--Introduction-->
     <section class="intro" id="home">
-        <div class="overlay">
+        <div class="overlay ">
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Shelton Ngwenya</strong>
             </h1>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="cta-btn">
-                <a href="SN CV Tech (1).pdf" class="btn">Download CV <i class="fas fa-download"></i> </a>
+                <a href="SN CV Tech (1).pdf" class="btn">View CV <i class="fas fa-download"></i> </a>
             </div>
 
             <img src="./images/Shelton Profile Pic.jpg" alt="A picture of Shelton in a Park" class="about-me__img">
@@ -108,12 +108,6 @@
                     <p>Do you need help in Programming assignment or Project? I will fulfil
                         all your needs. Bug Fixing, Programming Assignment or Project related help in programming.
                     </p>
-                    <p>
-                        Languages: C++, Java, Python <br>
-                        Services: Code Bug Fixing, Desktop Application Development, Creating a documentation for your
-                        code, Help developing your application <br>
-                        Expertise: Basic Functionalities, OOP Concepts
-                    </p>
                 </div>
                 <!--/ service-->
 
@@ -122,26 +116,13 @@
                     <p>Looking for Flat & Modern Minimalist Logo that your clients will remember and you will love?
                         I will create and design it for you.
                     </p>
-                    <p>
-                        Why choose me?
-                        - Memorable and timeless designs.
-                        - Customer happiness is the center of my products.
-                        - Custom, creative, professional, quality work.
-                        - Eye-catching trending and successful.
-                    </p>
                 </div>
                 <!--/ service-->
 
                 <div class="column service">
                     <h3>Media Products</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.
-                        Nullam non nisi est sit. Etiam erat velit scelerisque in dictum non consectetur.
-                        Cursus vitae congue mauris rhoncus aenean vel. Id diam vel quam elementum pulvinar etiam non
-                        quam
-                        lacus.
-                        Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi.</p>
+                    <p>I will design and create some media products for you such as basic html and css templates for
+                        adversiting on social media platforms, posters etc.</p>
                 </div>
                 <!--/ service-->
             </div>
@@ -182,9 +163,27 @@
                             <img src="./Icons/icons8-java-480.png" alt="">
                         </span>
                     </div>
+
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/icons8-c-programming-240.png" alt="">
+                        </span>
+                    </div>
                     <div class="skills__button">
                         <span class="skills-icon">
                             <img src="./Icons/icons8-c++-480.png" alt="">
+                        </span>
+                    </div>
+
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/icons8-nodejs-240.png" alt="">
+                        </span>
+                    </div>
+
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/r.png" alt="">
                         </span>
                     </div>
                     <div class="skills__button">
@@ -204,7 +203,7 @@
                     </div>
                     <div class="skills__button">
                         <span class="skills-icon">
-                            <img src="./Icons/icons8-canva-200.png" alt="">
+                            <img src="./Icons/icons8-docker-144.png" alt="">
                         </span>
                     </div>
                     <div class="skills__button">
@@ -214,27 +213,37 @@
                     </div>
                     <div class="skills__button">
                         <span class="skills-icon">
-                            <img src="./Icons/icons8-gimp-240.png" alt="">
-                        </span>
-                    </div>
-                    <div class="skills__button">
-                        <span class="skills-icon">
-                            <img src="./Icons/icons8-visual-studio-code-2019-480.png" alt="">
-                        </span>
-                    </div>
-                    <div class="skills__button">
-                        <span class="skills-icon">
                             <img src="./Icons/icons8-microsoft-sql-server-480.png" alt="">
                         </span>
                     </div>
                     <div class="skills__button">
                         <span class="skills-icon">
-                            <img src="./Icons/iconfinder_317716_cms_wordpress_blog_blogging_icon_512px.png" alt="">
+                            <img src="./Icons/icons8-mysql-logo-480.png" alt="">
                         </span>
                     </div>
                     <div class="skills__button">
                         <span class="skills-icon">
-                            <img src="./Icons/icons8-mysql-logo-480.png" alt="">
+                            <img src="./Icons/sqlite_logo_icon_169724.png" alt="">
+                        </span>
+                    </div>
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/neo4j.png" alt="">
+                        </span>
+                    </div>
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/mongodb_original_wordmark_logo_icon_146425.png" alt="">
+                        </span>
+                    </div>
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/icons8-gimp-240.png" alt="">
+                        </span>
+                    </div>
+                    <div class="skills__button">
+                        <span class="skills-icon">
+                            <img src="./Icons/iconfinder_317716_cms_wordpress_blog_blogging_icon_512px.png" alt="">
                         </span>
                     </div>
                 </div>
@@ -246,7 +255,7 @@
     <section class="bg-clr" id="projects">
         <div class="my-work">
             <h2 class="section__title section__title--services">
-                My Work
+                Projects
             </h2>
             <div class="wrapper">
 
@@ -254,12 +263,11 @@
                     <div class="carousel owl-carousel">
                         <div>
                             <!--Item portfolio 01-->
-                            <a href="#" class="portfolio__item">
+                            <a href="https://github.com/sheltsnn15/Hill-Climbing-Algorithm" class="portfolio__item">
                                 <img src="./images/pexels-pixabay-265087.jpg" alt="" class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 1</h2>
+                                    <h2 class="img__title">Hill-Climbing Algorithm</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -267,12 +275,11 @@
                         </div>
                         <div>
                             <!--Item portfolio 02-->
-                            <a href="#" class="portfolio__item">
+                            <a href="https://github.com/sheltsnn15/College-DB-JPA" class="portfolio__item">
                                 <img src="./images/pexels-athena-2582931.jpg" alt="" class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 2</h2>
+                                    <h2 class="img__title">JPA College Database</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -280,12 +287,11 @@
                         </div>
                         <div>
                             <!--Item portfolio 03-->
-                            <a href="#" class="portfolio__item">
+                            <a href="https://github.com/sheltsnn15/Taxi-Booking-System" class="portfolio__item">
                                 <img src="./images/pexels-christina-morillo-1181675.jpg" alt="" class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 3</h2>
+                                    <h2 class="img__title">Taxi Booking System</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -293,13 +299,12 @@
                         </div>
                         <div>
                             <!--Item portfolio 04-->
-                            <a href="#" class="portfolio__item">
+                            <a href="https://github.com/sheltsnn15/Inventory" class="portfolio__item">
                                 <img src="./images/pexels-mikael-blomkvist-6483618(1).jpg" alt=""
                                     class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 4</h2>
+                                    <h2 class="img__title">Products Ordering System</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -310,9 +315,8 @@
                             <a href="#" class="portfolio__item">
                                 <img src="./images/pexels-mike-esparza-3702458.jpg" alt="" class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 5</h2>
+                                    <h2 class="img__title">Blog Hosting System</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -320,12 +324,11 @@
                         </div>
                         <div>
                             <!--Item portfolio 06-->
-                            <a href="#" class="portfolio__item">
+                            <a href="https://github.com/sheltsnn15/Paper-Roll-Cutting-N-Robot-Moving-Algorithm" class="portfolio__item">
                                 <img src="./images/pexels-pixabay-257886.jpg" alt="" class="portfolio__img">
                                 <div class="img__overlay">
-                                    <h2 class="img__title">Project 6</h2>
+                                    <h2 class="img__title">Robot-Moving Algorithm</h2>
                                     <p class="img__description">
-                                        This is the project description
                                     </p>
 
                                 </div>
@@ -342,22 +345,10 @@
 
     <!--Footer-->
     <footer class="footer" id="contact">
-
-        <a href="mailto:hello@shelton.dev" class="footer-link">hello@shelton.dev</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a href="#" class="social-list__link">
-                    <i class="fab fa-youtube"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a href="https://github.com/sheltsnn15/sheltsnn15.github.io" class="social-list__link">
+                <a href="https://github.com/sheltsnn15/" class="social-list__link">
                     <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a href="https://www.fiverr.com/sheltonngwenya" class="social-list__link">
-                    <img class="fiverr-icon" src="./Icons/3069760-512.png" alt=""></i>
                 </a>
             </li>
             <li class="social-list__item">
